syntax = "proto3";

package bidi;

option go_package = "bidistream/bidipb;bidipb";

message Greeting {

    string first_name = 1;
    string last_name = 2;
}

message BidiRequest {
    Greeting greeting = 1;
}

message BidiResponse {
    string result = 1;
}


service GreetService {
    //client stream api

    rpc BidiStream(stream BidiRequest) returns (stream BidiResponse) {};
}